<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:ignore="LabelFor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_login_label_email"
        android:textColor="#3F51B5" />

    <EditText
        android:id="@+id/id_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/a_login_label_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_login_label_password"
        android:textColor="#3F51B5" />

    <EditText
        android:id="@+id/id_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/a_login_label_password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3F51B5"
        android:text="@string/mobile" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:inputType="number" />

    <Button
        android:id="@+id/id_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/signin"
        android:textColor="#3F51B5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4pt"
            android:text="@string/signup"
            android:onClick="processSignUpLinkClick"/>
    </LinearLayout>

</LinearLayout>